--- a/Resources/style.css
+++ b/Resources/style.css
@@ -2,3 +2,9 @@ body {
     background-color: #29303cbf;
     
 }
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #29303cbf;
+}
+
