--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@ body {
 
 h1 {
     font-family: 'Times New Roman', Times, serif;
+    color: #fff !important;
     background-color: #29303cbf;
+    font-size: 50pt;
+    text-align: center;
 }
 
+.navigation {
+    z-index: 1;
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    color: #fff
+    display: inline-block;
+    margin: 0;
+    padding: 20px;
+    background-color: #3b5583bf;
+
+}
