--- a/style.css
+++ b/style.css
@@ -1,24 +1,31 @@
 body {
-    background-color: #29303cbf;
-    
+    background-color: #1f1f1fbf;
+    color: #fff;
 }
 
 h1 {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Aharoni', sans-serif;
     color: #fff !important;
     background-color: #29303cbf;
     font-size: 50pt;
     text-align: center;
 }
 
-.navigation {
-    z-index: 1;
+header {
+    background-color: #a1713abf;
+    position: fixed;
+    z-index: 5;
+    width: 100%;
+}
+
+nav {
+    margin: 0;
+    padding: 20px auto;
+}
+nav li {
+    width: 80px;
     font-family: 'Raleway', sans-serif;
     font-size: 12px;
-    color: #fff
+    color: #fff;
     display: inline-block;
-    margin: 0;
-    padding: 20px;
-    background-color: #3b5583bf;
-
 }
