--- a/style.css
+++ b/style.css
@@ -25,14 +25,39 @@ nav {
 
 .navigation li {
     width: 80px;
+    text-decoration: none;
+    text-decoration-color: #f70727bf;
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     color: #fff;
     display: inline-block;
+    margin:  5px 50px;
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 4pt ;
+    background-color: black;
 }
 
 .navigation ul {
     background-color: green;
     opacity: 70%;
     text-align: center;
+    position: relative;
+    
+}
+
+
+
+#aboutme h3 {
+    text-align: center;
+    font-size: 32px;
+    text-decoration: underline;
+    border: 4px solid green;
+    margin: 2px 2px;
+    padding: 3px;
+    width: 400px center;
+}
+
+#aboutme {
+    margin: auto 30px;
 }
